--- a/react_playground/package.json
+++ b/react_playground/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@react-spring/web": "^9.7.4",
     "@reduxjs/toolkit": "^2.2.6",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -38,7 +39,6 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
@@ -50,6 +50,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-refresh": "^0.11.0",
+    "react-router-dom": "^6.26.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.77.6",
@@ -57,7 +58,6 @@
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "three": "^0.166.1",
     "web-vitals": "^2.1.4",
@@ -158,7 +158,10 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.3.2"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "prettier": "^3.3.2",
+    "tailwindcss": "^3.4.9"
   },
   "proxy": "https://api.cntv.cn"
 }
