--- a/react_playground/vercel.json
+++ b/react_playground/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/(api|v1)/:path*",
       "destination": "https://api.cntv.cn/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
