--- a/react_playground/package.json
+++ b/react_playground/package.json
@@ -46,6 +46,7 @@
     "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
+    "react-code-blocks": "^0.1.6",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
