--- a/react_playground/package.json
+++ b/react_playground/package.json
@@ -29,6 +29,7 @@
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
@@ -44,6 +45,7 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
+    "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-code-blocks": "^0.1.6",
@@ -79,6 +81,9 @@
       "react-app",
       "react-app/jest"
     ],
+    "rules": {
+      "import/no-webpack-loader-syntax": "off"
+    },
     "parserOptions": {
       "babelOptions": {
         "presets": [
