--- a/react_playground/.prettierrc
+++ b/react_playground/.prettierrc
@@ -4,5 +4,7 @@
   "printWidth": 80,
   "singleQuote": true,
   "trailingComma": "es5",
-  "semi": true
+  "semi": true,
+  "endOfLine": "lf",
+  "proseWrap": "never"
 }
