--- a/react_playground/package.json
+++ b/react_playground/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.18.3",
     "axios": "^1.7.2",
+    "axios-request-throttle": "^1.0.0",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
